# NGIN.Log

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
benchmarks/: CMakeLists.txt  LoggingBenchmarks.cpp
build-all/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  NGINLogConfig.cmake  cmake_install.cmake  compile_commands.json
build-all/_ngin_base/: Makefile  NGINBaseConfig.cmake  cmake_install.cmake
build-all/benchmarks/: Makefile  NGINLogBenchmarks  cmake_install.cmake
build-all/examples/: Makefile  cmake_install.cmake
build-all/examples/BasicLogging/: Makefile  NGINLogBasicExample  cmake_install.cmake
cmake/: NGINLogConfig.cmake.in
docs/: API.md  Architecture.md  Performance.md  Production.md  QuickStart.md  README.md  Sinks.md
examples/: CMakeLists.txt
examples/BasicLogging/: CMakeLists.txt  main.cpp
include/NGIN/Log/: Config.hpp  Context.hpp  Export.hpp  FormatterPolicy.hpp  Log.hpp  LogLevel.hpp  Logger.hpp  LoggerRegistry.hpp  Macros.hpp  RecordBuilder.hpp  RecordFormatter.hpp  Sink.hpp  Types.hpp
include/NGIN/Log/Sinks/: AsyncSink.hpp  ConsoleSink.hpp  FileSink.hpp  RotatingFileSink.hpp
src/NGIN/Log/: FormattingUtilities.hpp  LoggerRegistry.cpp  RecordFormatter.cpp
src/NGIN/Log/Sinks/: ConsoleSink.cpp  FileSink.cpp  RecordLine.hpp  RotatingFileSink.cpp
tests/: AllTests.cpp  CMakeLists.txt
